# a2a-mcp-openrouter

./: .cursorrules  README.md  pyproject.toml  response.xml
src/a2a_mcp_openrouter/: constant.py
src/a2a_mcp_openrouter/client/: __main__.py  agent.py
src/a2a_mcp_openrouter/server/: __main__.py  agent.py  agent_executor.py
