[project]
name = "a2a-mcp-openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "milo", email = "zh.milo@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.3",
    "asyncclick>=8.1.8",
    "colorama>=0.4.6",
    "fastmcp>=2.3.4",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "rich>=14.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
a2a-server = "a2a_mcp_openrouter.server.__main__:main"
a2a-client = "a2a_mcp_openrouter.client.__main__:main"
